@@ -1,6 +1,12 @@
 devel
 -----
 
+* Remove misleading error messages about upgrade commands to carry out in
+  case of a database upgrade. These commands are highly platform-dependent and
+  also depend on whether ArangoDB is started manually, via the ArangoDB starter
+  or as a service.
+  In order to not confuse end users, remove the potentially misleading instructions.
+
 * Clear backups from DB servers and agency, when plan unchanged not
   met and not allowing for inconsistency.
 
